[gd_scene load_steps=4 format=3 uid="uid://ddmyc2ajisxq8"]

[ext_resource type="Script" path="res://player/bullet.gd" id="1_jgbms"]
[ext_resource type="Texture2D" uid="uid://ddl7xy6rap3k8" path="res://assets/sprites/laser.png" id="1_n41l3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_iinma"]
radius = 3.5
height = 58.0

[node name="Bullet" type="Area2D" groups=["player_projectile"]]
scale = Vector2(2, 2)
script = ExtResource("1_jgbms")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(3.8743e-07, -2.61491e-07)
texture = ExtResource("1_n41l3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_iinma")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
